fix(table): add a gap between column header component & title text

--- a/src/components/table/partial-styles/header-component.scss
+++ b/src/components/table/partial-styles/header-component.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     margin-right: functions.pxToRem(20);
+    gap: 0.25rem;
 }
 
 .title-component-text {
